Text and align fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,10 +3,13 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
 }
 
 h2 {
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 100;
     text-transform: uppercase;
     width: 100%;
