--- a/src/components/ProjectGrid/ProjectGrid.scss
+++ b/src/components/ProjectGrid/ProjectGrid.scss
@@ -1,7 +1,7 @@
 .projects {
     display: grid;
     grid-template-columns: repeat(3, minmax(300px, 1fr));
-    grid-template-rows:  100px repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows:  auto repeat(auto-fit, minmax(300px, 1fr));
     width: 80%;
     justify-content: space-evenly;
     margin-bottom: 40px;
