--- a/src/components/assignment/Assignment.scss
+++ b/src/components/assignment/Assignment.scss
@@ -45,4 +45,7 @@ $red-hover: #F44336;
 .assignment span {
     display: block;
     padding: 10px 0;
+    font-size: 17px;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
 }
