--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -22,7 +22,7 @@ footer .about {
     display: grid; 
     grid-template-columns: auto auto;
     grid-template-rows:  85px auto;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 footer .me {
@@ -56,7 +56,8 @@ footer .about p {
     grid-row-start: 2; 
     padding: 0 0 0 20px;
     margin: 0;
-    line-height: 21px;
+    font-size: 17px;
+    letter-spacing: 0.01em;
 
     a {
         color: #ffffff;
